# haskell-enumerator-clone

./: Tests.hs  enumerator.anansi  enumerator.cabal  readme.txt
Examples/: cat.hs  wc.hs
benchmarks/: enumerator-benchmarks.cabal
examples/: cat.hs  wc.hs
lib/Data/: Enumerator.hs  Enumerator.hs-boot
lib/Data/Enumerator/: Binary.hs  Compatibility.hs  IO.hs  Internal.hs  List.hs  List.hs-boot  Text.hs  Trans.hs  Util.hs
scripts/: cabal-dist  common.bash  dist  haddock  latex  run-benchmarks  run-coverage  run-tests
src/: api-docs.anansi  binary.anansi  compat.anansi  compatibility.anansi  enumerator.anansi  io.anansi  list-analogues.anansi  list.anansi  primitives.anansi  public-interface.anansi  summary.anansi  text-codecs.anansi  text.anansi  title-todo.anansi  types.anansi  util.anansi  utilities.anansi
tests/: Benchmarks.hs  EnumeratorTests.hs  Properties.hs  Tests.hs  enumerator-tests.cabal
tests/EnumeratorTests/: Binary.hs  CatchError.hs  Compatibility.hs  Instances.hs  Join.hs  List.hs  Misc.hs  Sequence.hs  Stream.hs  Text.hs  Trans.hs  Typeable.hs  Util.hs
tests/EnumeratorTests/Binary/: Consume.hs  Drop.hs  Fold.hs  Handle.hs  Isolate.hs  Iterate.hs  Map.hs  Repeat.hs  Replicate.hs  Require.hs  Split.hs  Unfold.hs  Util.hs  Zip.hs
tests/EnumeratorTests/List/: Consume.hs  Drop.hs  Fold.hs  Isolate.hs  Iterate.hs  Map.hs  Repeat.hs  Replicate.hs  Require.hs  Split.hs  Unfold.hs  Unique.hs  Util.hs  Zip.hs
tests/EnumeratorTests/Text/: Codecs.hs  Consume.hs  Drop.hs  Fold.hs  Handle.hs  Isolate.hs  Iterate.hs  Map.hs  Repeat.hs  Replicate.hs  Require.hs  Split.hs  Unfold.hs  Util.hs  Zip.hs
tests/data/: utf8-crlf.txt  utf8-lf.txt
