name: enumerator-benchmarks
version: 0
build-type: Simple
cabal-version: >= 1.6

executable enumerator_benchmarks
  main-is: Benchmarks.hs
  ghc-options: -Wall -O2

  build-depends:
      base > 3 && < 5
    , transformers
    , bytestring
    , text
    , enumerator
    , criterion
    , progression
    , deepseq
