name: enumerator-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

flag coverage
  default: False
  manual: True

executable enumerator_tests
  main-is: EnumeratorTests.hs
  ghc-options: -Wall
  hs-source-dirs: ../lib,.

  if flag(coverage)
    ghc-options: -fhpc

  build-depends:
      base > 3 && < 5
    , bytestring
    , chell >= 0.2 && < 0.3
    , chell-quickcheck >= 0.1 && < 0.2
    , containers
    , QuickCheck
    , split
    , text
    , transformers
