name: enumerator-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

flag coverage
  default: False
  manual: True

flag test-io-functions
  default: True

executable enumerator_tests
  main-is: EnumeratorTests.hs
  ghc-options: -Wall
  hs-source-dirs: ../lib,.

  if flag(coverage)
    ghc-options: -fhpc

  if flag(test-io-functions)
    build-depends:
        base >= 4.2 && < 5.0
      , knob >= 0.1 && < 0.2
  else
    build-depends:
        base >= 4.0 && < 5.0

  build-depends:
      bytestring
    , chell >= 0.2 && < 0.3
    , chell-quickcheck >= 0.1 && < 0.2
    , containers
    , QuickCheck
    , silently
    , split
    , text
    , transformers
