name: enumerator-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

data-files:
  data/ascii-crlf.txt
  data/ascii-lf.txt
  data/utf8-crlf.txt
  data/utf8-lf.txt

flag coverage
  default: False
  manual: True

flag test-io-functions
  default: True

executable enumerator_tests
  main-is: EnumeratorTests.hs
  ghc-options: -Wall
  hs-source-dirs: ../lib,.

  if flag(coverage)
    ghc-options: -fhpc

  if flag(test-io-functions)
    build-depends:
        base >= 4.2 && < 5.0
      , knob >= 0.1 && < 0.2

    if !os(windows)
      build-depends:
            silently
  else
    build-depends:
        base >= 4.0 && < 5.0

  if os(windows)
    cpp-options: -DCABAL_OS_WINDOWS

  build-depends:
      bytestring
    , chell >= 0.2 && < 0.3
    , chell-quickcheck >= 0.1 && < 0.2
    , containers
    , QuickCheck
    , split
    , text
    , transformers
